--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <nav id="desktop-nav">
         <div class="logo">Uththara Jayawardana</div>
         <div>
-        <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </nav>
+
+    <!-- Hamburger Menu -->
     <nav id="hamburger-nav">
         <div class="logo">Uththara Jayawardana</div>
         <div class="hamburger-menu">
@@ -27,13 +29,39 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="menu-links"></div>
-            <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-            <div></div>
+            <div class="menu-links">
+                <ul>
+                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic-3.png" alt="Profile Picture">
+        </div>
+        <div class="section__text">
+          <p class="section__text_p1">Hello I'm</p>
+          <h1 class="title">Uththara Jayawardana</h1>
+          <p class="section__text_p2">Full Stack Developer</p>
+          <div class="btn-container">
+            <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+            <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+          </div>
+          <div id="socials-container">
+            <img src="./assets/linkedin.png" alt="My LinkedIn profile" 
+            class="icon" onclick="location.href='https://www.linkedin.com/in/uththara-jayawardana/'">
+            <img src="./assets/github.png" alt="My Github profile" 
+            class="icon" onclick="location.href='https://github.com/Gaveshika/'">
+
+          </div>
+        </div>
+
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
