--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="title">Uththara Jayawardana</h1>
           <p class="section__text_p2">Full Stack Developer</p>
           <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Uththara Jayawardana_CV.pdf')">Download CV</button>
             <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
           </div>
           <div id="socials-container">
