--- a/index.html
+++ b/index.html
@@ -61,6 +61,39 @@
         </div>
 
     </section>
+    <section id="about">
+        <p class="section__text_p1">Get To Know More</p>
+            <h1 class="title">About Me</h1>
+           <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png" alt="About Picture">
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png" alt="Experience" class="icon">
+                        <h3>Experience</h3>
+                        <p>Intern Software Engineer<br/>Sri Lanka Telecom [Jan 2025-Present]</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="Education" class="icon">
+                        <h3>Education</h3>
+                        <p>B.Sc. Computer Science <br/>University of Colombo School of Computing</p>
+                    </div>
+                    </div>
+                    <div class="text-containers">
+                    <p>
+                        I am a Full Stack Developer with a passion for creating innovative solutions. I have experience in developing 
+                        web applications using technologies such as HTML, CSS, JavaScript, React, PHP, Java , Springboot, Laravel and MySql. 
+                        I am a quick learner and a team player who is always eager to learn new technologies 
+                        and work on challenging projects.
+                    </p>
+                    </div>   
+                </div>
+            <img src="./assets/arrow.png" alt="Arrow" class="icon arrow" onclick="location.href='./#experience'">
+           </div>
+    </section>    
+        
 
     <script src="script.js"></script>
 </body>
