--- a/index.html
+++ b/index.html
@@ -1,100 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+  </head>
+  <body>
     <nav id="desktop-nav">
-        <div class="logo">Uththara Jayawardana</div>
-        <div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+      <div class="logo">Uththara Jayawardana</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </nav>
 
     <!-- Hamburger Menu -->
     <nav id="hamburger-nav">
-        <div class="logo">Uththara Jayawardana</div>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="menu-links">
-                <ul>
-                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-                </ul>
-            </div>
+      <div class="logo">Uththara Jayawardana</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
+        <div class="menu-links">
+          <ul>
+            <li><a href="#about" onclick="toggleMenu()">About</a></li>
+            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <section id="profile">
-        <div class="section__pic-container">
-            <img src="./assets/profile-pic-3.png" alt="Profile Picture">
+      <div class="section__pic-container">
+        <img src="./assets/profile-pic-3.png" alt="Profile Picture" />
+      </div>
+      <div class="section__text">
+        <p class="section__text_p1">Hello I'm</p>
+        <h1 class="title">Uththara Jayawardana</h1>
+        <p class="section__text_p2">Full Stack Developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/Uththara Jayawardana_CV.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
         </div>
-        <div class="section__text">
-          <p class="section__text_p1">Hello I'm</p>
-          <h1 class="title">Uththara Jayawardana</h1>
-          <p class="section__text_p2">Full Stack Developer</p>
-          <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/Uththara Jayawardana_CV.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
-          </div>
-          <div id="socials-container">
-            <img src="./assets/linkedin.png" alt="My LinkedIn profile" 
-            class="icon" onclick="location.href='https://www.linkedin.com/in/uththara-jayawardana/'">
-            <img src="./assets/github.png" alt="My Github profile" 
-            class="icon" onclick="location.href='https://github.com/Gaveshika/'">
-
-          </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/uththara-jayawardana/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://github.com/Gaveshika/'"
+          />
         </div>
-
+      </div>
     </section>
     <section id="about">
-        <p class="section__text_p1">Get To Know More</p>
-            <h1 class="title">About Me</h1>
-           <div class="section-container">
-            <div class="section__pic-container">
-                <img src="./assets/about-pic.png" alt="About Picture">
+      <p class="section__text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img src="./assets/about-pic.png" alt="About Picture" />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="Experience"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>
+                Intern Software Engineer<br />Sri Lanka Telecom <br />[Jan
+                2025-Present]
+              </p>
             </div>
-            <div class="about-details-container">
-                <div class="about-containers">
-                    <div class="details-container">
-                        <img src="./assets/experience.png" alt="Experience" class="icon">
-                        <h3>Experience</h3>
-                        <p>Intern Software Engineer<br/>Sri Lanka Telecom [Jan 2025-Present]</p>
-                    </div>
-                    <div class="details-container">
-                        <img src="./assets/education.png" alt="Education" class="icon">
-                        <h3>Education</h3>
-                        <p>B.Sc. Computer Science <br/>University of Colombo School of Computing</p>
-                    </div>
-                    </div>
-                    <div class="text-containers">
-                    <p>
-                        I am a Full Stack Developer with a passion for creating innovative solutions. I have experience in developing 
-                        web applications using technologies such as HTML, CSS, JavaScript, React, PHP, Java , Springboot, Laravel and MySql. 
-                        I am a quick learner and a team player who is always eager to learn new technologies 
-                        and work on challenging projects.
-                    </p>
-                    </div>   
-                </div>
-            <img src="./assets/arrow.png" alt="Arrow" class="icon arrow" onclick="location.href='./#experience'">
-           </div>
-    </section>    
-        
+            <div class="details-container">
+              <img src="./assets/education.png" alt="Education" class="icon" />
+              <h3>Education</h3>
+              <p>
+                B.Sc. Computer Science <br />University of Colombo School of
+                Computing
+              </p>
+            </div>
+          </div>
+          <div class="text-containers">
+            <p>
+              I am a Full Stack Developer with a passion for creating innovative
+              solutions. I have experience in developing web applications using
+              technologies such as HTML, CSS, JavaScript, React, PHP, Java ,
+              Springboot, Laravel and MySql. I am a quick learner and a team
+              player who is always eager to learn new technologies and work on
+              challenging projects.
+            </p>
+          </div>
+        </div>
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow"
+          class="icon arrow"
+          onclick="location.href='./#experience'"
+        />
+      </div>
+    </section>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
