--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
       </div>
      
     </section>
+    <section id="projects">
+      
+    </section>
 
     <script src="script.js"></script>
   </body>
