--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contacts">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -403,7 +403,7 @@
         onclick="location.href='./#contacts'"
       />
     </section>
-    <section id="contact">
+    <section id="contacts">
       <p class="section__text_p1">Get In Touch</p>
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
@@ -425,6 +425,19 @@
               </p>
 
     </section>
+    <footer>
+      <nav1>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav1>
+      <p>Copyright &#169; 2025 Uththara Jayawardana. All Rights Reserved</p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
