Added medium png

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             class="icon"
             onclick="location.href='https://github.com/Gaveshika/'"
           />
+          <img
+            src="./assets/medium.png"
+            alt="My Medium profile"
+            class="icon"
+            onclick="location.href='https://medium.com/@jayawardanauththara21'"
+          />
         </div>
         <img
           src="./assets/arrow.png"
