Added images to the project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Uththara Jayawardana</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -336,12 +336,7 @@
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/itsvishwa/PARKnGO';"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
 
@@ -358,15 +353,15 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/itsvishwa/AnotherProject';"
+                onclick="location.href='https://github.com/Anuraj2601/Eventix';"
               >
-                Github
+              Frontend
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/itsvishwa/AnotherProject';"
+                onclick="location.href='https://github.com/Anuraj2601/Eventix-Spring';"
               >
-                Live Demo
+              Backend
               </button>
             </div>
           </div>
@@ -384,16 +379,16 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/itsvishwa/ThirdProject';"
+                onclick="location.href='https://github.com/Gaveshika/luxecoastline';"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-1 project-btn"
                 onclick="location.href='https://github.com/itsvishwa/ThirdProject';"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
